test/tests/compiler/5_local_variables/valid/extra_credit/compound_mod.plx
pub fn main(none) i32 {
    to_mod: i32 = 5
    to_mod %= 3
    return to_mod
}
