test/tests/compiler/5_local_variables/invalid_parse/invalid_specifier.plx
pub fn main(none) i32 {
    bar: i32 foo = 3
    return bar
}
